# goreal_nativewebapp

./: .env.example  .env.production.template  .flake8  .gitignore  .pre-commit-config.yaml  =69.5.1  API_KEY_QUICKFIX.md  CICD_SENTRY_SETUP.md  COMPLETION_REPORT.md  DEPLOY_CHECKLIST.md  DEPLOY_GUIDE_SIMPLE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  FIREBASE_DEPLOY_GUIDE.md  FIX_FIREBASE_API_KEY.md  GOREAL_README.md  GUILD_SELECTION_ROUTING_IMPLEMENTATION.md  JOURNEY_LOG_UI_FIX.md  Makefile  QUEST_PERMISSION_FIX.md  QUICK_FIX.md  README.md  START_HERE.md  SUBMISSION_WORKFLOW_TEST.md  TROUBLESHOOTING_REGISTER.md  UI_UX_AURA_IMPROVEMENTS.md  UPGRADE_SUMMARY.md  VIDEO_UPLOAD_FIX.md  ci-cd-restoration-report.md  claude_execution_success.txt  claude_success.txt  control_tower_success.txt  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  quick-deploy.bat  quick-deploy.sh  (+7 more)
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SETUP_GITHUB_REPO.md  branch-protection.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/debugging-system/: README.md  ai-debugger.js  log-retriever.js  mock-test-file.py  package-lock.json  package.json  test-report.json  test-system.js
.github/workflows/: auto-fix.yml  ci.yml  debug-trigger.yml  deploy.yml  pr-check.yml  release.yml
backend-functions/: .gcloudignore  index.js  package-lock.json  package.json
database/init/: 01_init_schema.sql  02_sample_data.sql
deploy/monitoring/: alert-rules.yml  docker-compose.monitoring.yml  prometheus.yml
deploy/monitoring/grafana-dashboards/: goreal-overview.json
deploy/scripts/: deploy.sh  monitoring-setup.sh  rollback.sh  secrets-manager.sh  setup-env.sh
docker/production/: entrypoint.sh  healthcheck.sh  wait-for-it.sh
docs/: DEVELOPMENT.md
docs/deployment/: PRODUCTION_DEPLOYMENT.md  SECURITY_GUIDE.md
docs/templates/: QUICK_START.md  README.md  TEMPLATE_SYSTEM_GUIDE.md
frontend/: .env.example  .firebaserc  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  storage.rules
frontend/functions/: communityStats.js  index.js  package-lock.json  package.json  pushNotifications.js  stravaAuth.js  syncStravaActivities.js
frontend/public/: firebase-messaging-sw.js  index.html  manifest.json  sw.js
frontend/src/: App.test.tsx  App.tsx  firebase.ts  index.css  index.tsx
frontend/src/components/: AdminPanel.css  AdminPanel.tsx  AscensionPath.css  AscensionPath.tsx  AuraOfferingCeremony.css  AuraOfferingCeremony.tsx  AuraStreamSection.css  AuraStreamSection.tsx  Auth.css  AuthDebugger.css  AuthDebugger.tsx  AuthPage.tsx  AvatarEvolutionAnimation.css  AvatarEvolutionAnimation.tsx  BackgroundManager.tsx  CelestialRecord.css  CelestialRecord.tsx  CommunityStats.css  CommunityStats.tsx  Dashboard.css  Dashboard.tsx  DynamicQuestReport.css  DynamicQuestReport.tsx  EnhancedQuestCard.css  EnhancedQuestCard.tsx  EnhancedQuestManager.tsx  ErrorBoundary.tsx  ErrorLogsViewer.css  ErrorLogsViewer.tsx  FirebaseDebug.tsx  GuildChat.css  GuildChat.tsx  GuildImageManager.css  GuildImageManager.tsx  GuildSelection.css  GuildSelection.tsx  HallOfHonor.css  HallOfHonor.tsx  ImprovedBackgroundManager.css  ImprovedBackgroundManager.tsx  (+29 more)
frontend/src/config/: firestoreSchema.ts  gameConfig.json
frontend/src/constants/: guildMasters.ts  guilds.ts
frontend/src/content/: kaelDialogue.json
frontend/src/contexts/: AuthContext.tsx  NotificationContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAura.ts  useBackground.ts  useDashboardState.ts  useNotifications.ts  useQuestManager.ts
frontend/src/services/: pushNotificationService.ts
frontend/src/styles/: DesignSystem.css  guild-themes.css
frontend/src/types/: index.ts
frontend/src/utils/: dateUtils.ts  errorHandler.ts  errorLogger.ts  firestoreUtils.ts  imageUtils.ts
goreal/: __init__.py  goreal-project.lnk
goreal-website/backend/: app.yaml  config.py  main.py  requirements.txt
goreal-website/frontend/: index.html  script.js  style.css
goreal/api/: __init__.py  app.py  routes.py
goreal/config/: __init__.py  settings.py
goreal/core/: __init__.py  database.py  sheets_client.py  validators.py
goreal/dashboard/: __init__.py  app.py  components.py  data_handlers.py
notebooks/api_testing/: api_testing_suite.ipynb
notebooks/data_analysis/: 01_player_analytics.ipynb
scripts/: backup-data.sh  create-project.py  dev-logs.sh  dev-setup.sh  dev-stop.sh  generate-sample-data.py  project-cli.sh  quick-demo.sh  run_api.py  run_dashboard.py  template-manager.py  test-api.sh
templates/project-templates/flask-api/: README.md.template  template.json
templates/project-templates/fullstack/: template.json
templates/project-templates/streamlit-dashboard/: app.py.template  template.json
templates/shared-configs/docker/: Dockerfile.template  docker-compose.yml.template
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_validators.py
tests/integration/: test_database_integration.py
(+7 files in other folders)
